# chemistry-agents

./: .gitattributes  .gitignore  .pypirc  CACHING_GUIDE.md  CACHING_SUMMARY.md  CHANGES_SUMMARY.md  CONTRIBUTING.md  CPU_OPTIMIZATION_GUIDE.md  INSTALLATION.md  LICENSE  LLM_AGENT_README.md  MANIFEST.in  PACKAGE_DISTRIBUTION_GUIDE.md  PYPI_PUBLISHING_GUIDE.md  Pipfile  README.md  START_HERE.md  benchmark_models.py  build_package.bat  build_package.py  cache_cli.py  chat_with_chemistry_agent.py  chemberta_chat_demo.py  chemberta_molecular_intelligence.py  create_sample_data.py  demo_hybrid_agent.py  demo_intelligent_chemberta.py  download_datasets.py  download_huggingface_model.py  explain_how_agent_works.py  get_started.py  hybrid_agent_concept.py  interactive_chemberta_demo.py  interactive_intelligent_agent.py  mailmap.txt  openai_llm_test.py  pyproject.toml  quick_chemistry_chat.py  quick_test.py  quick_train_demo.py  (+19 more)
.claude/: settings.local.json
configs/: cache_config.yaml  cpu_config.json
examples/: advanced_usage.py  basic_usage.py  caching_demo.py  chemberta_example.py  chemistry_llm_agent_example.py  complete_hf_workflow.py  cpu_optimized_usage.py  huggingface_models.py  quick_start_hf.py  unit_operations_examples.py
scripts/: fine_tune_transformer.py  train_model.py
src/chemistry_agents/: __init__.py
src/chemistry_agents/agents/: __init__.py  base_agent.py  cached_agent_wrapper.py  chemberta_agent.py  chemberta_conversational_agent.py  chemistry_llm_agent.py  drug_discovery_agent.py  intelligent_chemberta_agent.py  property_prediction_agent.py  solubility_agent.py  toxicity_agent.py  unit_operations_agent.py
src/chemistry_agents/models/: __init__.py  graph_neural_network.py  molecular_predictor.py  transformer_model.py
src/chemistry_agents/utils/: __init__.py  api_integration.py  cache_manager.py  data_processing.py  evaluation.py  model_hub.py  performance_profiler.py  prediction_cache.py
tests/: __init__.py  conftest.py  test_agent_integration.py  test_api_integration.py  test_basic_structure.py  test_cache_system.py  test_cloud_training.py  test_cpu_optimization.py  test_minimal.py  test_runner.py  test_unit_operations_agent.py
